tests/ui/traits/associated_type_bound/check-trait-object-bounds-1.stderr
error[E0277]: the trait `X` is not implemented for `dyn X<Y = str>`
  --> $DIR/check-trait-object-bounds-1.rs:12:9
   |
LL |     f::<dyn X<Y = str>>();
   |         ^^^^^^^^^^^^^^ the trait `X` is not implemented for `dyn X<Y = str>`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/check-trait-object-bounds-1.rs:3:1
   |
LL | trait X {
   | ^^^^^^^
note: required by a bound in `f`
  --> $DIR/check-trait-object-bounds-1.rs:7:9
   |
LL | fn f<T: X + ?Sized>() {
   |         ^ required by this bound in `f`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
